# undine

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  async.py  example.js  graph.py  index.html  justfile  manage.py  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  search.html  service-worker.js
.cursor/rules/: nox-tests.mdc  python-environment.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
async/: index.html
contributing/: index.html
css/: docs.css
dataloaders/: index.html
directives/: index.html
docs/: async.md  contributing.md  dataloaders.md  directives.md  faq.md  file-upload.md  filtering.md  getting-started.md  global-object-ids.md  hacking-undine.md  incremental.md  index.md  integrations.md  interfaces.md  lifecycle-hooks.md  mutations.md  optimizer.md  ordering.md  pagination.md  persisted-documents.md  queries.md  scalars.md  schema.md  service-worker.js  settings.md  subscriptions.md  tutorial.md  unions.md  validation-rules.md
docs/css/: docs.css  pygments.css
docs/js/: docs.js
docs/plugins/: generate_urls.py  meta_description.py
example_project/app/: admin.py  apps.py  hooks.py  middleware.py  models.py  mutations.py  schema.py  types.py  urls.py  views.py
example_project/example/: apps.py  models.py
example_project/project/: asgi.py  logging.py  middleware.py  query_logging.py  settings.py  testdb  typing.py  urls.py
faq/: index.html
file-upload/: index.html
filtering/: index.html
getting-started/: index.html
global-object-ids/: index.html
hacking-undine/: index.html
incremental/: index.html
integrations/: index.html
interfaces/: index.html
lifecycle-hooks/: index.html
mutations/: index.html
mypy_undine/: __init__.py  fullnames.py  main.py
mypy_undine/base_class_hooks/: __init__.py  class_body.py  class_generics.py  class_keywords.py  directive_init.py
mypy_undine/class_decorator_hooks/: __init__.py  decorators.py
mypy_undine/utils/: expression_utils.py  types_utils.py
optimizer/: index.html
ordering/: index.html
pagination/: index.html
persisted-documents/: index.html
pytest_undine/: client.py  fixtures.py  websocket.py
queries/: index.html
scalars/: index.html
schema/: index.html
search/: search_index.json
settings/: index.html
snippets/directives/: directive_argument.py  directive_argument_deprecation_reason.py  directive_argument_description.py  directive_argument_description_class.py  directive_argument_extensions.py  directive_extensions.py  directive_is_repeatable.py  directive_location_enum.py  directive_location_union.py  models.py
snippets/filtering/: filter_alias.py  filter_decorator.py  filter_description.py  filter_description_class.py  filter_field.py  filter_many.py  filter_match.py  filter_queryset.py  filter_required.py  filterset_extensions.py  filterset_no_auto.py
snippets/global_object_ids/: models.py  node_entrypoint.py
snippets/hacking_undine/: registration_literal.py
snippets/index/: models.py
snippets/integrations/: channels.py  graphql_test_client.py
snippets/interfaces/: interface.py  interface_entrypoint_limit.py  interface_entrypoint_process_results.py  interface_field_description.py  interface_field_description_class.py  interface_implement.py  interface_implement_interface.py  interface_schema_name.py  models.py
snippets/lifecycle_hooks/: caching_hook.py  error_hook.py
snippets/mutations/: input.py  input_decorator.py  input_decorator_docstring.py  input_decorator_hidden.py  input_deprecation_reason.py  input_description.py  input_directives.py  input_hidden.py  input_input_only.py  input_required.py  models.py  mutation_type_after.py  mutation_type_description.py  mutation_type_directives.py  mutation_type_exclude.py  mutation_type_extensions.py  mutation_type_kind_related.py  mutation_type_output.py  mutation_type_permissions.py  mutation_type_validate.py
snippets/optimizer/: models_1.py
snippets/ordering/: order_deprecation_reason.py  order_directives.py  order_extensions.py  order_field.py  order_field_name.py  order_null_placement.py  order_schema_name.py  order_subquery.py  orderset_basic.py  orderset_directives.py  orderset_extensions.py
snippets/pagination/: connection.py  connection_pagination_handler.py
snippets/queries/: field_calculation.py  field_deprecation_reason.py  field_expression.py  field_field_name.py  field_many.py  field_nullable.py  field_permissions_resolver.py  field_resolver.py  field_schema_name.py  field_string.py  models_1.py  query_type_extensions.py  query_type_filter.py  query_type_no_auto.py  query_type_no_register.py  query_type_permissions.py  query_type_permissions_filter_queryset.py  query_type_relations.py  query_type_relations_field_name.py  query_type_schema_name.py
snippets/tutorial/: adding_filters.py  (+12 more)
subscriptions/: index.html
tests/: conftest.py  helpers.py  test_apps.py  test_calculation.py  test_dataclasses.py  test_dataloader.py  test_dataloaders.py  test_directives.py  test_entrypoint.py  test_exceptions.py  test_files.py  test_filtering.py  test_hooks.py  test_interface.py  test_middleware.py  test_modeltranslation.py  test_modeltranslations.py  test_pagination.py  test_parse_model_field.py  test_registries.py  test_relay.py  test_resolvers.py  test_schema.py  test_subscriptions.py  test_testing_client.py  test_text.py  test_typing.py  test_union.py  test_use_cases.py
tutorial/: index.html
undine/: __init__.py  apps.py  calculation.py  converters.py  dataclasses.py  dataloaders.py  directives.py  docstring.py  entrypoint.py  error_codes.py  errors.py  exceptions.py  execute.py  execution.py  field.py  fields.py  filtering.py  filters.py  hooks.py  http.py  interface.py  metaclasses.py  middleware.py  model_graphql.py  mutation.py  ordering.py  pagination.py  parsers.py  query.py  registies.py  registry.py  relay.py  resolvers.py  schema.py  settings.py  subscription.py  subscriptions.py  text.py  types.py  typing.py  (+4 more)
unions/: index.html
validation-rules/: index.html
(+869 files in other folders)
