[project]
name = "undine"
version = "0.2.7"
description = "A GraphQL library for Django"
authors = [
    { name = "Matti Lamppu", email = "lamppu.matti.akseli@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = [
    "Django",
    "GraphQL",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
requires-python = ">=3.11,<4"
dynamic = [
    "dependencies",
]

[project.urls]
"Homepage" = "https://mrthearman.github.io/undine"
"Repository" = "https://github.com/MrThearMan/undine"
"Bug Tracker" = "https://github.com/MrThearMan/undine/issues"
"Documentation" = "https://mrthearman.github.io/undine"

[tool.poetry]
requires-poetry = ">=2.0.0"
packages = [
    { include = "undine" },
    { include = "pytest_undine" },
]

[project.entry-points.pytest11]
undine = "pytest_undine.fixtures"

[project.entry-points."mkdocs.plugins"]
serviceWorkerUrls = "docs.plugins.generate_urls:GenerateServiceWorkerUrlsPlugin"
metaDescriptions = "docs.plugins.meta_description:MetaDescriptionPlugin"

[tool.poetry.dependencies]
django = ">=5.0"
graphql-core = ">=3.2.6"
django-settings-holder = ">=0.3.0"
sqlparse = ">=0.5.3"
pillow = { version = ">=11.2.1", optional = true }
django-debug-toolbar = { version = ">=5.2.0", optional = true }
channels = { version = ">=4.2.2", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "9.0.2"
pytest-django = "4.12.0"
pytest-asyncio = "1.3.0"
coverage = "7.13.4"
hypothesis = "6.151.9"
freezegun = "1.5.5"
factory-boy = "3.3.3"
nox = "2026.2.9"
urllib3 = "2.6.3"
django-modeltranslation = "0.19.19"
psycopg = { version = "3.3.3", extras = ["binary", "pool"] }
granian = { version = "2.7.1", extras = ["pname", "uvloop", "reload"] }

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
pymdown-extensions = "10.21"
pygments = "2.19.2"
mkdocs-mermaid2-plugin = "1.2.3"
beautifulsoup4 = "4.14.3"

[tool.poetry.group.lint.dependencies]
pre-commit = "4.5.1"
mypy = "1.19.1"
django-stubs = "5.2.9"
py-spy = "0.4.1"
httpx = "0.28.1"

[tool.poetry.extras]
image = ["pillow"]
debug = ["django-debug-toolbar"]
channels = ["channels"]

[tool.coverage.run]
relative_files = true
branch = true
include = [
    "undine/*",
    "pytest_undine/*",
    "tests/*",  # Make sure all tests are actually run
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
    "pass",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.project.settings"
addopts = "--disable-warnings"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
