[project]
name = "undine"
version = "0.3.6"
description = "A GraphQL library for Django"
authors = [
    { name = "Matti Lamppu", email = "lamppu.matti.akseli@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = [
    "Django",
    "GraphQL",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
requires-python = ">=3.11,<4"
dynamic = [
    "dependencies",
]

[project.urls]
"Homepage" = "https://mrthearman.github.io/undine"
"Repository" = "https://github.com/MrThearMan/undine"
"Bug Tracker" = "https://github.com/MrThearMan/undine/issues"
"Documentation" = "https://mrthearman.github.io/undine"

[tool.poetry]
requires-poetry = ">=2.0.0"
packages = [
    { include = "undine" },
    { include = "mypy_undine" },
    { include = "pytest_undine" },
]

[project.entry-points."mypy.plugins"]
mypy_undine = "mypy_undine:plugin"

[project.entry-points.pytest11]
undine = "pytest_undine.fixtures"

[project.entry-points."mkdocs.plugins"]
serviceWorkerUrls = "docs.plugins.generate_urls:GenerateServiceWorkerUrlsPlugin"
metaDescriptions = "docs.plugins.meta_description:MetaDescriptionPlugin"

[tool.poetry.dependencies]
django = ">=5.2.14"
graphql-core = ">=3.2.11"
django-settings-holder = ">=0.3.0"
sqlparse = ">=0.5.3"
pillow = { version = ">=11.2.1", optional = true }
django-debug-toolbar = { version = ">=5.2.0", optional = true }
channels = { version = ">=4.2.2", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "9.1.1"
pytest-django = "4.12.0"
pytest-asyncio = "1.4.0"
pytest-mypy-plugins = "4.0.3"
coverage = "7.14.1"
hypothesis = "6.155.6"
freezegun = "1.5.5"
factory-boy = "3.3.3"
nox = "2026.4.10"
urllib3 = "2.7.0"
django-modeltranslation = "0.20.3"
psycopg = { version = "3.3.4", extras = ["binary", "pool"] }
granian = { version = "2.7.6", extras = ["pname", "uvloop", "reload"] }

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
pymdown-extensions = "10.21.3"
pygments = "2.20.0"
mkdocs-mermaid2-plugin = "1.2.3"
beautifulsoup4 = "4.15.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "4.6.0"
py-spy = "0.4.2"
httpx = "0.28.1"
mypy = "2.1.0"
django-stubs = "5.2.9"
channels-stubs = "0.1.9"

[tool.poetry.extras]
image = ["pillow"]
debug = ["django-debug-toolbar"]
channels = ["channels"]

[tool.coverage.run]
relative_files = true
branch = true
include = [
    "undine/*",
]
omit = [
    "docs/*",
    "example_project/*",
    "mypy_undine/*",
    "pytest_undine/*",
    "tests/*",
    "undine/persisted_documents/migrations/*",
    "undine/utils/graphql/introspection.py",  # grpahql-core>=3.3.0a12 required
    "async.py",
    "manage.py",
    "noxfile.py",
]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'except ImportError:',
    'with suppress\(ImportError\):',
    'with contextlib.suppress\(ImportError\):',
    'class .+\(.*\bProtocol(\[.+\])?\):',
    'pragma: no cover',
    'pragma: no branch',
    '\A(?s:.*# pragma: exclude file.*)\Z',
    'pass',
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.project.settings"
addopts = "--disable-warnings"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
